# dwui

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  manage.py  pyproject.toml
.github/: SECURITY.md  copilot-instructions-tests.md  copilot-instructions.md
.github/workflows/: build_agent.yml  ruff.yml
agent/: Dockerfile  main.py  parsers.py  settings.py
config/: settings.py  urls.py
config/config/: settings.py
docker/: apps.py
dwui/: adguard_home_config.py  api_client.py  apps.py  console.py  container_config.py  container_images.py  context_processors.py  data_importer.py  docker_helper.py  forms.py  models.py  notifications.py  settings.py  urls.py  views.py  wsgi.py
dwui/container_configs/: __init__.py  adguard_home.py  airsonic.py  host_timezone.py  loader.py
dwui/container_configs/lsio/: adguardhome-sync.json  airsonic-advanced.json  altus.json  apprise-api.json  ardour.json  audacity.json  babybuddy.json  bambustudio.json  bazarr.json  beets.json  blender.json  boinc.json  bookstack.json  budge.json  calibre-web.json  calibre.json  calligra.json  changedetection.io.json  chromium.json  code-server.json  cops.json  cura.json  daapd.json  darktable.json  davos.json  ddclient.json  deluge.json  digikam.json  diskover.json  dokuwiki.json  doplarr.json  doublecommander.json  duckdns.json  duplicati.json  emby.json  emulatorjs.json  fail2ban.json  faster-whisper.json  feed2toot.json  ferdium.json  (+136 more)
dwui/migrations/: 0001_initial.py  0002_adminsettings.py  0002_alter_config_application_setup_and_more.py  0003_alter_config_application_setup_and_more.py  0003_remove_adminsettings_admin_email_and_more.py  0004_adminsettings_default_config_path_and_more.py  0004_remove_adminsettings_id_adminsettings_site_id.py  0005_remove_linuxserver_architectures_remove_config_caps_and_more.py  0006_adminsettings_default_gid_adminsettings_default_uid.py
dwui/templates/: admin.html  base.html  container_details.html  containers.html  images.html  index.html  networks.html  new_container.html  volumes.html
dwui/templates/account/: login.html  password_reset.html  signup.html
dwui/templates/partials/: container_config_form.html  container_logs.html  containers_list.html  images_table.html  networks_table.html  volumes_table.html
dwui/templatetags/: __init__.py  app_filters.py
tests/: images.json  test_agent_main.py  test_agent_settings.py  test_app_filters.py  test_docker.py  test_settings.py  test_urls.py
